# esp32-bedsidelamp

./: .gitignore  .gitmodules  CMakeLists.txt  pytest_bedsidelamp.py  sdkconfig
main/: CMakeLists.txt  dimmer_curve.py  led_luts.c  led_luts.h  ledstrip.c  ledstrip.h  main.c  test.py  wifi.c
